manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-flask
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: waeldalaous/app:v3
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "150Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
