manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-flask-svc
spec:
  selector:
    app: flask
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 5000
